fix color contrast

--- a/lesson02/styles/media-query.css
+++ b/lesson02/styles/media-query.css
@@ -2,12 +2,14 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-header, main, footer {
+header,
+main,
+footer {
     max-width: 640px;
     margin: 1rem auto;
     border: 1px solid #bbb;
     padding: 1rem;
-    background-color: #4095f0;
+    background-color: #97c7fa;
 }
 
 main {
